--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -70,7 +70,7 @@
                     android:layout_height="56px"
                     android:layout_marginRight="28px"
                     android:layout_centerVertical="true"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <ImageView
                         android:id="@+id/driverCallIcon1"
@@ -100,7 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:background="@color/white_translucent">
 
                 <android.support.v7.widget.RecyclerView
@@ -121,7 +121,7 @@
                 android:background="@color/white_translucent"
                 android:orientation="vertical"
                 android:splitMotionEvents="false"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -328,7 +328,7 @@
                 <LinearLayout
                     android:id="@+id/linearLayoutDeliveryItem"
                     android:layout_width="720px"
-                    android:layout_height="330px"
+                    android:layout_height="335px"
                     android:background="@color/grey_light_delivery_tab_fill"
                     android:orientation="vertical">
 
@@ -342,12 +342,12 @@
                     <RelativeLayout
                         android:id="@+id/linearLayoutDeliveryItemHeader"
                         android:layout_width="match_parent"
-                        android:layout_height="72px"
+                        android:layout_height="91px"
                         android:background="@color/white">
 
                         <TextView
                             android:id="@+id/textViewCustomerName"
-                            android:layout_width="490px"
+                            android:layout_width="430px"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="30px"
                             android:layout_centerVertical="true"
@@ -356,53 +356,13 @@
                             android:visibility="visible"
                             android:textColor="@color/black_text_v2"/>
 
-                        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                            android:id="@+id/textViewShowDistance"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="28px"
-                            android:layout_centerVertical="true"
-                            android:text="@string/NA"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/text_size_28"
-                            android:layout_alignParentRight="true"
-                            android:visibility="visible"
-                            />
-
-
-                    </RelativeLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="142px"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="12px">
-
-                        <LinearLayout
-                            android:id="@+id/linearLayoutContent"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/textViewCustomerPickupAddress"
-                                android:layout_width="398px"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="30px"
-                                android:maxLines="4"
-                                android:textSize="30px"
-                                android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
-                                android:textColor="@color/black_text_v2"
-                                />
-
-                        </LinearLayout>
-
                         <RelativeLayout
                             android:id="@+id/relativeLayoutCall"
                             android:layout_width="226px"
                             android:layout_height="74px"
-                            android:layout_marginLeft="25px"
-                            android:layout_marginTop="15px"
+                            android:layout_marginRight="25px"
+                            android:layout_marginTop="8px"
+                            android:layout_alignParentRight="true"
                             android:visibility="visible"
                             android:background="@drawable/new_orange_btn_corner_normal">
 
@@ -425,6 +385,60 @@
                                 android:textSize="38px"/>
                         </RelativeLayout>
 
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="142px"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="12px">
+
+                        <LinearLayout
+                            android:id="@+id/linearLayoutContent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/textViewCustomerPickupAddress"
+                                android:layout_width="448px"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="30px"
+                                android:maxLines="2"
+                                android:textSize="30px"
+                                android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
+                                android:textColor="@color/black_text_v2"
+                                />
+
+                            <TextView
+                                android:id="@+id/textViewCustomerCashRequired"
+                                android:layout_width="428px"
+                                android:layout_height="wrap_content"
+                                android:visibility="visible"
+                                android:layout_marginLeft="30px"
+                                android:layout_marginTop="10px"
+                                android:layout_marginBottom="10px"
+                                android:textSize="30px"
+                                android:text="lllllllllllllll"
+                                android:textColor="@color/black_text_v2"
+                            />
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/textViewShowDistance"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="100px"
+                            android:layout_marginRight="24px"
+                            android:gravity="right"
+                            android:text="@string/NA"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/text_size_28"
+                            android:visibility="visible"
+                        />
 
                     </LinearLayout>
 
@@ -514,7 +528,7 @@
                 android:background="@drawable/grey_light_delivery_tab_fill_rounded_corner"
                 android:orientation="vertical"
                 android:splitMotionEvents="false"
-                android:visibility="visible"
+                android:visibility="gone"
                 >
 
                 <ImageView
